--- a/coding-tracker/coding-tracker.csproj
+++ b/coding-tracker/coding-tracker.csproj
@@ -3,11 +3,10 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>coding_tracker</RootNamespace>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.13"/>
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0"/>
+    <PackageReference Include="ConsoleTableExt" Version="3.1.9"/>
   </ItemGroup>
 </Project>
